--- a/anybuy/account/templates/Homepage.html
+++ b/anybuy/account/templates/Homepage.html
@@ -10,7 +10,7 @@
     <div class="clearfix"> </div>
     <!--part3 navigation-->
 	<div class="container nav_top">
-		<div class="row " style="text-align: center;color: #3a87ad; margin-bottom: 30px;" >
+		<div class="row " style="text-align: center;color: #3a87ad; margin-bottom: 30px;margin-left:10px" >
 			<div class="col-md-1 column nav_change">
 				<ui>
 					<a href="#floor1" class="Font_color">TV</a>
@@ -59,7 +59,7 @@
 		</div>
 	</div>
 	<div class="row clearfix">
-		<div class="col-md-10 column mycenter">
+		<div class="col-md-8 column mycenter">
 			<div class="carousel slide" id="carousel-449960" >
 				<ol class="carousel-indicators">
 					<li class="active" data-slide-to="0" data-target="#carousel-449960">
@@ -69,9 +69,9 @@
 					<li data-slide-to="2" data-target="#carousel-449960">
 					</li>
 				</ol>
-				<div id="carousel" class="carousel-inner" style="height:300px">   
+				<div id="carousel" class="carousel-inner" style="height:400px">   
 					<div class="item active">      <!--网站介绍1-->
-						<img alt="" src="/file/image/14.jpg" style="height:300px;" >
+						<img alt="" src="/file/image/14.jpg" style="height:400px;" >
 						<div class="carousel-caption">
 							<h4>
 							</h4>
@@ -80,7 +80,7 @@
 						</div>
 					</div>
 					<div class="item">             <!--网站介绍2-->
-						<img alt="" src="/file/image/15.jpg" style="height:300px;">
+						<img alt="" src="/file/image/15.jpg" style="height:400px;">
 						<div class="carousel-caption">
 							<h4>
 							</h4>
@@ -89,7 +89,7 @@
 						</div>
 					</div>
 					<div class="item">              <!--网站介绍3-->
-						<img alt="" src="/file/image/16.jpg" style="height:300px;">
+						<img alt="" src="/file/image/16.jpg" style="height:400px;">
 						<div class="carousel-caption">
 							<h4>
 							</h4>
