--- a/anybuy/store/templates/bankaccount.html
+++ b/anybuy/store/templates/bankaccount.html
@@ -14,9 +14,9 @@
 
 						<div class="form-group">
 							<div class="col-md-3"></div>
-							<div class="col-md-4" style="width:300px;margin-left:12px">
+							<div class="col-md-4" style="margin-left:12px">
 								<a href="/">
-									<img src="/file/images/weixin.png" style="height: 160px"></a>
+									<img style="width:300px;" src="/file/images/weixin.png" style="height: 160px"></a>
 							</div>
 						</div>
 					
