--- a/anybuy/store/templates/Customer_CommodityInfo.html
+++ b/anybuy/store/templates/Customer_CommodityInfo.html
@@ -18,7 +18,7 @@
 				Commodity Name:{{ commodity.CommodityName }}
 			</h3> <!--这里是Commodity里的CommodityName-->
 			<p class="hangju">
-		        Price:{{ commodity.SellPrice }} $
+		        Price:{{ commodity.SellPrice }} HDK
 			</p> <!--这里是Commodity里的OriginalPrice-->
             <div class="row clearfix">
 				<div class="col-md-12 column">
