--- a/anybuy/store/templates/Customer_MyCart.html
+++ b/anybuy/store/templates/Customer_MyCart.html
@@ -70,13 +70,13 @@
 									</div>
 								</div>
 							</td>
-							<td data-th="Price">${{ cart.CommodityID.SellPrice }}</td>
+							<td data-th="Price">HDK{{ cart.CommodityID.SellPrice }}</td>
 
                             <td data-th="Quantity">
 								<input onchange="refresh({{ cart.CommodityID.id }}, this.value)" type="number" class="form-control text-center" value="{{ cart.CartCommodityAmount }}">
 							</td>
 
-							<td id="subtotal{{ cart.CommodityID.id }}" data-th="Subtotal" class="text-center">{% widthratio cart.CommodityID.SellPrice 1 cart.CartCommodityAmount %}$</td>
+							<td id="subtotal{{ cart.CommodityID.id }}" data-th="Subtotal" class="text-center">{% widthratio cart.CommodityID.SellPrice 1 cart.CartCommodityAmount %}HDK</td>
 							<td class="actions" data-th="">
 								<!--<button class="btn btn-info btn-sm"><i class="glyphicon glyphicon-refresh"></i></button>-->
 								<button onclick="rmfromcart('{{ cart.CommodityID.id }}')" class="btn btn-danger btn-sm"><img src = "/file/images/delete.png" style = "width:20px; height:20px"/></button>
@@ -90,7 +90,7 @@
 					<tfoot>
 						<tr>
 							<td colspan="3" class="hidden-xs"></td>
-							<td id="total" class="hidden-xs text-center"><strong>Total {{ total }}$</strong></td>
+							<td id="total" class="hidden-xs text-center"><strong>Total {{ total }}HDK</strong></td>
 							<td class="actions" data-th="">
 								<!--<button class="btn btn-info btn-sm"><i class="glyphicon glyphicon-refresh"></i></button>-->
 								<button class="btn btn-danger btn-sm" ><img src = "/file/images/delete.png" style = "width:20px; height:20px"/></button>
