--- a/anybuy/store/templates/helpcenter.html
+++ b/anybuy/store/templates/helpcenter.html
@@ -40,7 +40,7 @@
 			<h3 class="margin_change">Login and Modify personal information</h3>
 			<ul>
 				<li>Click the “Login” button, then show the following page.</li>
-				<ui><img src="/file/images/helpcenter_1.png" class="image_margin"></ui>
+				<ui><img src="/file/images/helpcenter_1.png" style="width:700px" class="image_margin"></ui>
 				<li>Input seller’s account and password, click “Login” button then you will go to the homepage</li>
 			</ul>
 		</div>
@@ -53,13 +53,13 @@
 			<p>Before this case start, the user must login the system using an customer account.</p>
 			<ul>
 				<li>Go to the home page of the commodity you selected.</li>
-				<li>nput the number of the commodity which you want to buy, and then click the “add to cart” button to add the record to the cart.</li>
-				<ui><img src="/file/images/helpcenter_2.png" class="image_margin"></ui>
+				<li>Input the number of the commodity which you want to buy, and then click the “add to cart” button to add the record to the cart.</li>
+				<ui><img src="/file/images/helpcenter_2.png" style="width:700px" class="image_margin"></ui>
 				<li>Click the “My Cart” button, it can be showed that the commodity is added to the My Cart.</li>
-				<ui><img src="/file/images/helpcenter_3.png" class="image_margin"></ui>
+				<ui><img src="/file/images/helpcenter_3.png" style="width:700px" class="image_margin"></ui>
 				<li>Click the delete icon 1 to delete the commodity you select.</li>
 				<li>Click the delete icon 2 to delete all the commodities in the cart.</li>
-				<ui><img src="/file/images/helpcenter_4.png" class="image_margin"></ui>
+				<ui><img src="/file/images/helpcenter_4.png" style="width:700px" class="image_margin"></ui>
 			</ul>
 		</div>
 	</div>
@@ -72,9 +72,9 @@
 			<ul>
 				<li>Go to the home page of the customer.</li>
 				<li>Click the “My Cart” button.</li>
-				<ui><img src="/file/images/helpcenter_5.png" class="image_margin"></ui>
+				<ui><img src="/file/images/helpcenter_4.png" style="width:700px" class="image_margin"></ui>
 				<li>Click “Checkout” button to pay.</li>
-				<ui><img src="/file/images/helpcenter_6.png" class="image_margin"></ui>
+				
 				<li>After paying successfully, the cart is empty.</li>
 			</ul>
 		</div>
@@ -88,7 +88,7 @@
 				<li>Go to the home page of the customer.</li>
 				<li>Click the “Manage Order” button, enter the Manage Order Page.</li>
 				<li>You can see the information of the order and input the comment to the commodity you buy.</li>
-				<ui><img src="/file/images/helpcenter_7.png" class="image_margin"></ui>
+				<ui><img src="/file/images/helpcenter_7.png" style="width:700px" class="image_margin"></ui>
 			</ul>
 		</div>
 	</div>
@@ -101,11 +101,11 @@
 			<ul>
 				<li>Go to the home page of the commodity you selected (refer to the scan commodity function in tourist model).</li>
 				<li>Click the “add to favorite” button to add commodities to customers’ favorites</li>
-				<ui><img src="/file/images/helpcenter_8.png" class="image_margin"></ui>
+				<ui><img src="/file/images/helpcenter_2.png" style="width:700px" class="image_margin"></ui>
 				<li>The “add to favorite” button will turn to “already to favorite”, and the commodity can be seen in your favorite.</li>
-				<ui><img src="/file/images/helpcenter_9.png" class="image_margin"></ui>
+				<ui><img src="/file/images/helpcenter_9.png" style="width:700px" class="image_margin"></ui>
 				<li>Click “My Favorite” link to scan the favorites.</li>
-				<ui><img src="/file/images/helpcenter_10.png" class="image_margin"></ui>
+				
 			</ul>
 		</div>
 	</div>
@@ -120,11 +120,9 @@
 				<li>Go to the home page of the customer.</li>
 				<li>Click “My Favorite” link to scan the favorites.</li>
 				<li>(add to cart):Click “Add to Cart”, add the commodity to cart.</li>
-				<ui><img src="/file/images/helpcenter_11.png" class="image_margin"></ui>
+				<ui><img src="/file/images/helpcenter_9.png" style="width:700px" class="image_margin"></ui>
 				<li>then add successfully, show the page:</li>
-				<ui><img src="/file/images/helpcenter_12.png" class="image_margin"></ui>
 				<li>(delete collections):Click “Del” button to delete the record from your favorite.</li>
-				<ui><img src="/file/images/helpcenter_13.png" class="image_margin"></ui>
 			</ul>
 		</div>
 	</div>
@@ -136,9 +134,8 @@
 			<p>Before this case start, the user must login the system using an customer account.</p>
 			<ul>
 				<li>Go to the home page, Click the “BuyHistory” button.</li>
-				<ui><img src="/file/images/helpcenter_14.png" class="image_margin"></ui>
+				<ui><img src="/file/images/helpcenter_14.png" style="width:700px" class="image_margin"></ui>
 				<li>Enter the Buys History page, scan the buy history.</li>
-				<ui><img src="/file/images/helpcenter_15.png" class="image_margin"></ui>
 				<li>Then you can scan year, month, day buy history.(refer to the store owner’s check sales history function).</li>
 			</ul>
 		</div>
@@ -152,9 +149,9 @@
 			<ul>
 				<li>Go to the home page of the customer.</li>
 				<li>(scan top10 commodities):Click the “Top 10 Commodities” link to scan top 10 commodities</li>
-				<ui><img src="/file/images/helpcenter_16.png" class="image_margin"></ui>
+				<ui><img src="/file/images/helpcenter_16.png" style="width:700px" class="image_margin"></ui>
 				<li>Click the first commodity, enter the commodity page.</li>
-				<ui><img src="/file/images/helpcenter_17.png" class="image_margin"></ui>
+				<ui><img src="/file/images/helpcenter_17.png" style="width:700px" class="image_margin"></ui>
 				<li>(scan top10 shops):Click the “Top 10 Shops” link to scan top 10 shops.</li>
 			</ul>
 		</div>
