--- a/anybuy/store/templates/manageCommodity.html
+++ b/anybuy/store/templates/manageCommodity.html
@@ -3,11 +3,11 @@
 
 {% block sellercontent %}
 <div class="col-md-6 column">
-	<h3>Commodity Infomation</h3>
+	<h3 class="text-primary">Commodity Infomation</h3>
 	<hr>
-	<form method = 'post' enctype="multipart/form-data">
+	<form id="ddd" method = 'post' enctype="multipart/form-data">
 		{% csrf_token %}
-		<div class="form-group">
+		<!-- <div class="form-group">
 			<label for="id_CommodityName">Commodity Name:</label>
 			<input class="form-control" name="CommodityName" id="id_CommodityName" type="text" placeholder="CommodityName" />
 		</div>
@@ -57,8 +57,36 @@
 		<div class="form-group">
 			<input id="id_IsAdv" name="IsAdv" type="checkbox" />
 			<label for="id_IsAdv">Is Adv?</label>
-		</div>
+		</div> -->
+		{{cf.as_p}}
 		<input class="btn btn-primary" type="submit" value = "Save" />
 	</form>
 </div>
+<script type="text/javascript">
+	// var p = $('p');
+	// for (var i = 0; i < p.length; i++) {
+	// 	$('<div class="form-group"></div>').appendTo('form');
+	// }
+	// var div = $('#ddd > div');
+	
+	// for (var i = 0; i < p.length; i++) {
+	// 	div[i].innerHTML = p[i].innerHTML;
+	// }
+	var label = $('label');
+	for (var i = 0; i < label.length; i++) {
+		$(label[i]).attr('class', 'col-sm-2 control-label');
+	}
+	var input = $('input');
+	for (var i = 2; i < input.length-2; i++) {
+		$(input[i]).attr('class', 'form-control');
+	}
+	$('#id_CommodityImage').attr('class', '');
+	$('#id_CommodityType').attr('class', 'form-control');
+	// var discount = document.getElementById('id_CommodityDiscount');
+	// discount.onkeyup = function(){
+	// 	this.value=this.value.replace(/\D/g,'');
+	// 	if(discount.value>10||discount.value<0){
+ //  		discount.value = 10;
+	// }
+</script>
 {% endblock %}
