--- a/anybuy/account/templates/Seller_ReturnAndRefund.html
+++ b/anybuy/account/templates/Seller_ReturnAndRefund.html
@@ -85,7 +85,7 @@
 						</td>
 						<td>{{ order.OrderAmount }} </td>
 						<td>
-							{% widthratio order.CommodityID.SellPrice 1 order.OrderAmount %}HDK
+							{% widthratio order.CommodityID.SellPrice 1 order.OrderAmount %}HK$
 						</td>
 						<td>Name:{{ order.CustomerOrderID.CustomerID.CustomerName}}<br>
 							Tel:{{ order.CustomerOrderID.CustomerID.CustomerTelephone}}<br>
