--- a/anybuy/store/templates/Customer_CommodityList.html
+++ b/anybuy/store/templates/Customer_CommodityList.html
@@ -55,7 +55,7 @@
 							<a href="/commodity/id/{{ commodity.id }}" style = "color:#3299CC">{{ commodity.CommodityName }}<!--这里是Commidity中的CommodityName--></a>
 						</td>
 						<td>
-							{{ commodity.SellPrice }} HDK	<!--这里是Commidity中的PurchasePrice-->
+							{{ commodity.SellPrice }} HK$	<!--这里是Commidity中的PurchasePrice-->
 						</td>
 					</tr>
                     {% endfor %}
