--- a/anybuy/store/templates/Customer_Favorite.html
+++ b/anybuy/store/templates/Customer_Favorite.html
@@ -48,7 +48,7 @@
         <tr class="yanse" id="item{{ favorite.CommodityID.id }}">
                 <td><a href="/commodity/id/{{ favorite.CommodityID.id }}" style = "color:#3299CC"><img src="/file/{{ favorite.CommodityID.CommodityImage }}" style = "height:90px;"/></a></td> <!--这里是Commodity里CommodityImage,可以根据favorite里的CommodityID找吧-->
                 <td><a href="/commodity/id/{{ favorite.CommodityID.id }}" style = "color:#3299CC">{{ favorite.CommodityID.CommodityName }}</a></td> <!--这里是Commodity里的CommodityName-->
-                <td>{{ favorite.CommodityID.SellPrice }}HDK</td>  <!--这里是Commodity里的OriginalPrice-->
+                <td>{{ favorite.CommodityID.SellPrice }}HK$</td>  <!--这里是Commodity里的OriginalPrice-->
                 <td class="text-center">
                     <a onclick="addtocart({{ favorite.CommodityID.id }})" class='btn btn-info btn-xs' href="#"> Add to Cart</a>
                     <a onclick="rmfromfavoritex('{{ favorite.CommodityID.id }}')" class="btn btn-danger btn-xs"> Del</a></td>   <!--这里的两个按钮分别是添加到cart和删除选项-->
