--- a/anybuy/store/templates/manageOrder.html
+++ b/anybuy/store/templates/manageOrder.html
@@ -93,9 +93,9 @@
 		<td><a href="/commodity/id/{{ ol.CommodityID.id }}" style = "color:#3299CC"><img src="/file/{{ ol.CommodityID.CommodityImage }}" style = "height:90px;"/></a></td>
 		<td><a href="/commodity/id/{{ ol.CommodityID.id }}" style = "color:#3299CC">{{ ol.CommodityID.CommodityName }}</a></td>
 		<td>{{ ol.OrderListDate }}</td>
-		<td>{{ ol.CommodityID.SellPrice }} HDK</td>
+		<td>{{ ol.CommodityID.SellPrice }} HK$</td>
 		<td>{{ ol.OrderAmount}}</td>
-		<td>{% widthratio ol.CommodityID.SellPrice 1 ol.OrderAmount %} HDK</td>
+		<td>{% widthratio ol.CommodityID.SellPrice 1 ol.OrderAmount %} HK$</td>
 
 		{% if ol.OrderListState == 0 %}
 		<td>paying</td>
@@ -155,4 +155,7 @@
 		{% endfor %}
 	</table>
 </div>
+<script type="text/javascript">
+	$('img').attr('style', 'width:180px');
+</script>
 {% endblock %}
