--- a/anybuy/store/templates/Customer_CommodityInfo.html
+++ b/anybuy/store/templates/Customer_CommodityInfo.html
@@ -120,8 +120,18 @@
                          
                             <div class="col-xs-10 col-md-11">
                               
-                                    <div class="mic-info">
-                                        By: {{ comment.CustomerID.CustomerName }}
+                                    <div id="nnn" class="mic-info">
+                                        
+                                        <script type="text/javascript">
+                                            var x = '{{ comment.CustomerID.CustomerName }}';
+                                            var y='';
+                                            for (var i = 0; i < x.length-2; i++) {
+                                                y+=x[i];
+                                            }
+                                            y='By:'+y;
+                                            y+='**';
+                                            $('#nnn').html(y);
+                                        </script>
                                         
                                         <!--这里可以通过商品ID在Comment表里找买家ID，再在Customer中找到Customername-->
                                     </div>
