--- a/anybuy/account/templates/register.html
+++ b/anybuy/account/templates/register.html
@@ -75,15 +75,15 @@
                                             <label for="id_CustomerAddress" class="col-sm-2 control-label">UserAdd.</label>
                                             <div class="col-sm-10">
                                             <select class="form-control span1" data-style="btn-primary" id="id_CustomerAddress" name="CustomerAddress">
-                                                <option value="Central and Western District">Central and Western District</option>
-                                                <option value="Eastern District">Eastern District</option>
-                                                <option value="Southern District">Southern District</option>
-                                                <option value="Wan Chai District">Wan Chai District</option>
-                                                <option value="Kowloon City District">Kowloon City District</option>
-                                                <option value="Kwun Tong District">Kwun Tong District</option>
-                                                <option value="Sham Shui Po District">Sham Shui Po District</option>
-                                                <option value="Wong Tai Sin District">Wong Tai Sin District</option>
-                                                <option value="Yau Tsim Mong District">Yau Tsim Mong District</option>
+                                                <option value="Central_and_Western_District">Central_and_Western_District</option>
+                                                <option value="Eastern_District">Eastern_District</option>
+                                                <option value="Southern_District">Southern_District</option>
+                                                <option value="Wan_Chai_District">Wan Chai_District</option>
+                                                <option value="Kowloon_City_District">Kowloon_City_District</option>
+                                                <option value="Kwun_Tong_District">Kwun Tong_District</option>
+                                                <option value="Sham_Shui_Po_District">Sham Shui Po_District</option>
+                                                <option value="Wong_Tai_Sin_District">Wong Tai Sin_District</option>
+                                                <option value="Yau_Tsim_Mong_District">Yau_Tsim_Mong_District</option>
                                             </select>
                                             </div>
                                             
