--- a/anybuy/store/templates/Customer_addr.html
+++ b/anybuy/store/templates/Customer_addr.html
@@ -14,36 +14,49 @@
 
 						<form class="form-horizontal" method = 'post'>
 						{% csrf_token %}
+						{% for addr in rootAddr%}
 							<div class="form-group">
 								<label for="id_Address" class="col-sm-2 control-label">
-									<input type="radio" name="cont" value="{{ rootAddr.CustomerAddress }}"></label>
+									<input type="radio">
+								</label>
 								<div class="col-sm-10">
 									<input type="text" 
 									class="form-control"
 									id="id_Address"
 									placeholder="your address"
-									value="{{ rootAddr.CustomerAddress }}"
-									></div>
+									name="cont"
+									value="{{addr.CustomerAddress}}"
+									>
+								</div>
 							</div>
+						{% endfor %}
 							<div class="form-group">
-								<label for="id_Address" class="col-sm-2 control-label">
-									<input type="radio" name="cont" value="2"></label>
+								<label for="id_Address" 
+								class="col-sm-2 control-label">
+									<input type="radio"
+									>
+								</label>
 								<div class="col-sm-10">
 									<input type="text" 
 									class="form-control" 
 									id="id_Address"  
 									placeholder="your address"
-									></div>
+									>
+								</div>
 							</div>
 							<div class="form-group">
-								<label for="id_Address" class="col-sm-2 control-label">
-									<input type="radio" name="cont" value="3"></label>
+								<label for="id_Address" 
+								class="col-sm-2 control-label">
+									<input type="radio" name="cont" value="3">
+								</label>
 								<div class="col-sm-10">
 									<input type="text" 
 									class="form-control" 
 									id="id_Address"  
 									placeholder="your address"
-									></div>
+									>
+
+								</div>
 							</div>
 							
 							
