--- a/anybuy/store/templates/bankaccount.html
+++ b/anybuy/store/templates/bankaccount.html
@@ -15,7 +15,7 @@
 						<div class="form-group">
 							<div class="col-md-3"></div>
 							<div class="col-md-4" style="margin-left:12px">
-								<a href="/checkout/">
+								<a href="/checkout/{{AddressID}}">
 									<img style="width:300px;" src="/file/images/weixin.png" style="height: 160px"
 									></a>
 							</div>
