--- a/anybuy/store/templates/Customer_addr.html
+++ b/anybuy/store/templates/Customer_addr.html
@@ -50,7 +50,7 @@
 						{% endfor %}
 							<div class="form-group">
 								<label class="col-sm-2 control-label">
-									<input id="address" type="radio" name="cont"></label>
+									<input checked="true" id="address" type="radio" name="cont"></label>
 								<div class="col-sm-6">
 									<input type="text" 
 									class="form-control" 
