--- a/anybuy/store/templates/manageAD.html
+++ b/anybuy/store/templates/manageAD.html
@@ -42,7 +42,7 @@
 		</h3>
 		</div>
 		<div class="tabbable" id="tabs-630860">
-			<ul class="nav nav-tabs">
+			<!-- <ul class="nav nav-tabs">
 				<li class="active">
 					<a href="#panel-14830" data-toggle="tab">Commodity</a>
 				</li>
@@ -52,7 +52,7 @@
                 <li>
 					<a href="#panel-14832" data-toggle="tab">Advertise in Homepage</a>
 				</li>
-			</ul>
+			</ul> -->
 
 			</div>
 			<div class="tab-content">
@@ -144,7 +144,7 @@
 			</table>
 			</div>
             <div class="tab-pane" id="panel-14832">
-			    <table class="table" >
+			    <!-- <table class="table" >
                 <thead>
 					<tr>
 						<th>
@@ -182,7 +182,7 @@
 					</tr>
                     {% endfor %}
 
-			</table>
+			</table> -->
             <table class="table" >
 				<thead>
 					<tr>
