--- a/anybuy/account/templates/login.html
+++ b/anybuy/account/templates/login.html
@@ -28,20 +28,21 @@
                             <div class="form-group">
                                 <label for="id_UserAccount" class="col-sm-2 control-label">Account</label>
                                 <div class="col-sm-10">
-                                    <input type="text" class="form-control" id="id_UserAccount" name="UserAccount" placeholder="User Account"></div>
+                                    <input  maxlength="10" type="text" class="form-control" id="id_UserAccount" maxlength="10" name="UserAccount" placeholder="User Account"></div>
                             </div>
                             <div class="form-group">
                                 <label for="id_UserPassword" class="col-sm-2 control-label">Password</label>
                                 <div class="col-sm-10">
-                                    <input type="password" class="form-control" name="UserPassword" id="id_UserPassword" placeholder="User Password">
+                                    <input  maxlength="10" type="password" class="form-control" name="UserPassword" id="id_UserPassword" placeholder="User Password">
                                 </div>
                             </div>
-                            <div class="form-group">
+                            <br><br><br>
+                            <!-- <div class="form-group">
                                 <div class="col-sm-8"></div>
                                 <div class="col-sm-4">
                                     <p style="color:#3a87ad"><a>forget your password?</a></p>
                                 </div>
-                            </div>
+                            </div> -->
                             <div class="text-center">
                                 <button type="submit" class="btn btn-primary ">Login</button>
                             </div>
@@ -54,8 +55,6 @@
         </div>
     </div>
 </div>
-<br>
-<br>
 <br>
 <br>
 <br>
