--- a/anybuy/account/templates/success.html
+++ b/anybuy/account/templates/success.html
@@ -2,5 +2,18 @@
 {% block title %}Succeed{% endblock %}
 
 {% block content %}
-    <h1>Dear {{UserName}},you commit a modification!</h1>
+    <div class="container">
+	<div class="row clearfix">
+		<div class="col-md-12 column">
+			<div class="row clearfix">
+				<div class="col-md-2 column"></div>
+				<div class="col-md-8 column">
+				<br><br><br><br><br>
+				<h3 class="text-primary">Dear {{UserName}},you commit a modification!</h3>
+				</div>
+				
+			</div>
+		</div>
+	</div>
+</div>
 {% endblock %}
