--- a/anybuy/store/templates/Customer_Favorite.html
+++ b/anybuy/store/templates/Customer_Favorite.html
@@ -38,8 +38,12 @@
                 xmlhttp.open("GET","/rmfromfavorite?id="+id,true);
                 xmlhttp.send();
             }
-            function addtocart(cid) {
-                alert('You have added {{ favorite.CommodityID.CommodityName }} to cart!');
+            function addtocart(cid,cc) {
+                if (cc<1) {
+                    alert('Sorry! sell out');
+                    return;
+                }
+                alert('You have added to cart!');
                 location.href='/addtocart/'+ cid +'/1';
             }
 
@@ -50,7 +54,7 @@
                 <td><a href="/commodity/id/{{ favorite.CommodityID.id }}" style = "color:#3299CC">{{ favorite.CommodityID.CommodityName }}</a></td> <!--这里是Commodity里的CommodityName-->
                 <td>{{ favorite.CommodityID.SellPrice }}HK$</td>  <!--这里是Commodity里的OriginalPrice-->
                 <td class="text-center">
-                    <a onclick="addtocart({{ favorite.CommodityID.id }})" class='btn btn-info btn-xs' href="#"> Add to Cart</a>
+                    <a onclick="addtocart({{ favorite.CommodityID.id }},{{ favorite.CommodityID.CommodityAmount }})" class='btn btn-info btn-xs' href="#"> Add to Cart</a>
                     <a onclick="rmfromfavoritex('{{ favorite.CommodityID.id }}')" class="btn btn-danger btn-xs"> Del</a></td>   <!--这里的两个按钮分别是添加到cart和删除选项-->
         </tr>
         {% endfor %}
