--- a/anybuy/store/templates/Customer_MyCart.html
+++ b/anybuy/store/templates/Customer_MyCart.html
@@ -41,6 +41,14 @@
                 xmlhttp.send();
             }
             function refresh(id, amount) {
+            	if (amount==0) {
+            		$('#qq').val(1);
+            		amount = 1;
+            	}
+            	
+                 if (amount>{{ cart.CommodityID.CommodityAmount }}) {
+                  amount = {{ cart.CommodityID.CommodityAmount }}
+                  }
                 xmlhttp=new XMLHttpRequest();
                 xmlhttp.onreadystatechange=function()
                 {
@@ -54,11 +62,15 @@
 
             }
             function checkout() {
-            	alert("receive checkout");
+            	if ({{carEmpty}}) {
+            		alert('Nothing to checkout!');
+            		return false;
+            	}
                 location.href='/addr/';
             }
         </script>
                     {% for cart in cartList %}
+                    
 						<tr id = "item{{ cart.CommodityID.id }}">
 							<td data-th="Product">
 								<div class="row">
@@ -72,9 +84,18 @@
 								</div>
 							</td>
 							<td data-th="Price">HK${{ cart.CommodityID.SellPrice }}</td>
-
+							<script type="text/javascript">
+							function qq(argument) {
+								var qq = $('#qq').val();
+                    			if (qq>{{ cart.CommodityID.CommodityAmount }}) {
+                    				
+                    				$('#qq').val('{{ cart.CommodityID.CommodityAmount }}');alert('Insufficient inventory!');
+                    			}
+							}
+                    				
+                    		</script>
                             <td data-th="Quantity">
-								<input onchange="refresh({{ cart.CommodityID.id }}, this.value)" type="number" class="form-control text-center" value="{{ cart.CartCommodityAmount }}">
+								<input id="qq" onchange="refresh({{ cart.CommodityID.id }}, this.value)" type="text" onkeyup="this.value=this.value.replace(/\D/g,'')"  onafterpaste="this.value=this.value.replace(/\D/g,'')" maxlength="3" class="form-control text-center" value="{{ cart.CartCommodityAmount }}">
 							</td>
 
 							<td id="subtotal{{ cart.CommodityID.id }}" data-th="Subtotal" class="text-center">{% widthratio cart.CommodityID.SellPrice 1 cart.CartCommodityAmount %}HK$</td>
