--- a/anybuy/store/templates/cuole.html
+++ b/anybuy/store/templates/cuole.html
@@ -9,7 +9,7 @@
 				<div class="col-md-2 column"></div>
 				<div class="col-md-8 column">
 				<br><br><br><br><br>
-				<h3 class="text-primary">Login failed. Please go to the mailbox to verify. </h3>
+				<h3 class="text-primary">Please go to the mailbox to verify. </h3>
 				</div>
 				
 			</div>
